// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails testing Snapshot testing 1`] = `
<TaskDetails
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-id="45a73767-5da3-49bf-9c40-d533c3e77ef3"
    data-ouia-component-type="task-details"
    data-ouia-safe={true}
  >
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <MockedTaskState
                task={
                  Object {
                    "actualOwner": null,
                    "adminGroups": Array [],
                    "adminUsers": Array [],
                    "completed": null,
                    "description": null,
                    "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "excludedUsers": Array [],
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                    "lastUpdate": "2020-02-19T11:11:56.282Z",
                    "name": "VisaApplication",
                    "outputs": "{}",
                    "potentialGroups": Array [],
                    "potentialUsers": Array [],
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": "2020-02-19T11:11:56.282Z",
                    "state": "Ready",
                  }
                }
              />
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="endpoint"
          label="Endpoint"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="endpoint"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Tooltip
                content="http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3"
              >
                <MockedComponent />
              </Tooltip>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with completed task 1`] = `
<TaskDetails
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": "2020-02-19T11:11:56.282Z",
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "completed",
    }
  }
>
  <div
    data-ouia-component-id="45a73767-5da3-49bf-9c40-d533c3e77ef3"
    data-ouia-component-type="task-details"
    data-ouia-safe={true}
  >
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <MockedTaskState
                task={
                  Object {
                    "actualOwner": null,
                    "adminGroups": Array [],
                    "adminUsers": Array [],
                    "completed": "2020-02-19T11:11:56.282Z",
                    "description": null,
                    "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "excludedUsers": Array [],
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                    "lastUpdate": "2020-02-19T11:11:56.282Z",
                    "name": "VisaApplication",
                    "outputs": "{}",
                    "potentialGroups": Array [],
                    "potentialUsers": Array [],
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": "2020-02-19T11:11:56.282Z",
                    "state": "completed",
                  }
                }
              />
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="completed"
          label="Completed"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="completed"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Completed
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="endpoint"
          label="Endpoint"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="endpoint"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Tooltip
                content="http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3"
              >
                <MockedComponent />
              </Tooltip>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with description 1`] = `
<TaskDetails
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": "This is a description",
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-id="45a73767-5da3-49bf-9c40-d533c3e77ef3"
    data-ouia-component-type="task-details"
    data-ouia-safe={true}
  >
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="description"
          label="Description"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="description"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Description
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  This is a description
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <MockedTaskState
                task={
                  Object {
                    "actualOwner": null,
                    "adminGroups": Array [],
                    "adminUsers": Array [],
                    "completed": null,
                    "description": "This is a description",
                    "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "excludedUsers": Array [],
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                    "lastUpdate": "2020-02-19T11:11:56.282Z",
                    "name": "VisaApplication",
                    "outputs": "{}",
                    "potentialGroups": Array [],
                    "potentialUsers": Array [],
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": "2020-02-19T11:11:56.282Z",
                    "state": "Ready",
                  }
                }
              />
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="endpoint"
          label="Endpoint"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="endpoint"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Tooltip
                content="http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3"
              >
                <MockedComponent />
              </Tooltip>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with owner 1`] = `
<TaskDetails
  userTaskInstance={
    Object {
      "actualOwner": "John Snow",
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-id="45a73767-5da3-49bf-9c40-d533c3e77ef3"
    data-ouia-component-type="task-details"
    data-ouia-safe={true}
  >
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <MockedTaskState
                task={
                  Object {
                    "actualOwner": "John Snow",
                    "adminGroups": Array [],
                    "adminUsers": Array [],
                    "completed": null,
                    "description": null,
                    "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "excludedUsers": Array [],
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                    "lastUpdate": "2020-02-19T11:11:56.282Z",
                    "name": "VisaApplication",
                    "outputs": "{}",
                    "potentialGroups": Array [],
                    "potentialUsers": Array [],
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": "2020-02-19T11:11:56.282Z",
                    "state": "Ready",
                  }
                }
              />
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  John Snow
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="endpoint"
          label="Endpoint"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="endpoint"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Tooltip
                content="http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3"
              >
                <MockedComponent />
              </Tooltip>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with potential groups and potential user 1`] = `
<TaskDetails
  userTaskInstance={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": "2020-02-19T11:11:56.282Z",
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [
        "group1",
        "group2",
      ],
      "potentialUsers": Array [
        "john",
        "mary",
      ],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": "2020-02-19T11:11:56.282Z",
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-id="45a73767-5da3-49bf-9c40-d533c3e77ef3"
    data-ouia-component-type="task-details"
    data-ouia-safe={true}
  >
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <MockedTaskState
                task={
                  Object {
                    "actualOwner": null,
                    "adminGroups": Array [],
                    "adminUsers": Array [],
                    "completed": null,
                    "description": null,
                    "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "excludedUsers": Array [],
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                    "lastUpdate": "2020-02-19T11:11:56.282Z",
                    "name": "VisaApplication",
                    "outputs": "{}",
                    "potentialGroups": Array [
                      "group1",
                      "group2",
                    ],
                    "potentialUsers": Array [
                      "john",
                      "mary",
                    ],
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": "2020-02-19T11:11:56.282Z",
                    "state": "Ready",
                  }
                }
              />
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="potential_users"
          label="Potential users"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="potential_users"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Potential users
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  john, mary
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="potential_groups"
          label="Potential groups"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="potential_groups"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Potential groups
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  group1, group2
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.282Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="endpoint"
          label="Endpoint"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="endpoint"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Endpoint
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Tooltip
                content="http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3"
              >
                <MockedComponent />
              </Tooltip>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;
